--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "node"
   ],
   "author": "Guilherme Marciano",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^5.1.3"
+  }
 }
